--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: cpp
 compiler:
   - gcc
-  - clang
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install python-software-properties
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update
-  - sudo apt-get install g++-4.8
+  - sudo apt-get install -qq python-software-properties
+  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - sudo apt-get install -qq g++-4.8
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 50
   - sudo apt-get install -qq cmake libboost-all-dev libgmp-dev
 before_script:
