--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
 language: cpp
-compiler:
-  - gcc
+compiler: gcc
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq python-software-properties
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq g++-4.8
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 50
-  - sudo apt-get install -qq cmake libboost-all-dev libgmp-dev
+  - sudo apt-get update
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo add-apt-repository -y ppa:boost-latest/ppa
+  - sudo apt-get update
+  - sudo apt-get install -qq cmake g++-4.8 libboost1.55-all-dev libgmp-dev
+  - echo 2 | sudo update-alternatives --config gcc
 before_script:
   - mkdir build
   - cd build
   - cmake ..
-script:
-  - make
+script: make check
+cache: apt 
+after_success:
+  - cpack -C CPackConfig.cmake -G TGZ
+  - cpack -C CPackConfig.cmake -G DEB
