--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,17 +5,16 @@ set(Tutte_VERSION_MINOR 3)
 
 include_directories("${PROJECT_SOURCE_DIR}/include")
 
-find_library(LIBGMP libgmp.a REQUIRED)
-set(Boost_USE_STATIC_LIBS ON)
+find_library(LIBGMP gmp REQUIRED)
 find_package(Boost REQUIRED COMPONENTS program_options)
 
-if(Boost_FOUND)
-  include_directories(${Boost_INCLUDE_DIRS})
-  add_executable(Tutte src/main.cpp src/parse_graph.cpp)
-  set_target_properties(Tutte PROPERTIES COMPILE_FLAGS "-std=c++11 -Wall -pedantic -O3")
-  target_link_libraries(Tutte ${Boost_LIBRARIES} ${LIBGMP})
-  install(TARGETS Tutte DESTINATION tutte)
-endif()
+include_directories(${Boost_INCLUDE_DIRS})
+add_executable(Tutte src/main.cpp src/parse_graph.cpp)
+set_target_properties(Tutte PROPERTIES COMPILE_FLAGS "-std=c++11 -Wall -pedantic -O3")
+target_link_libraries(Tutte ${Boost_LIBRARIES} ${LIBGMP})
+install(TARGETS Tutte DESTINATION tutte)
+
+# Testing
 
 enable_testing()
 
@@ -32,6 +31,8 @@ do_test(tutte_Gppp_N=2_L=4_M=2)
 # http://stackoverflow.com/questions/733475/cmake-ctest-make-test-doesnt-build-tests
 # http://public.kitware.com/Bug/view.php?id=8774
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} DEPENDS Tutte)
+
+# Packaging
 
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Andrea Bedini")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
