Fix install command, rename executable to lower case

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,17 +9,17 @@ find_library(LIBGMP gmp REQUIRED)
 find_package(Boost REQUIRED COMPONENTS program_options)
 
 include_directories(${Boost_INCLUDE_DIRS})
-add_executable(Tutte src/main.cpp src/parse_graph.cpp)
-set_target_properties(Tutte PROPERTIES COMPILE_FLAGS "-std=c++11 -Wall -pedantic -O3")
-target_link_libraries(Tutte ${Boost_LIBRARIES} ${LIBGMP})
-install(TARGETS Tutte DESTINATION tutte)
+add_executable(tutte src/main.cpp src/parse_graph.cpp)
+set_target_properties(tutte PROPERTIES COMPILE_FLAGS "-std=c++11 -Wall -pedantic -O3")
+target_link_libraries(tutte ${Boost_LIBRARIES} ${LIBGMP})
+install(TARGETS tutte DESTINATION bin)
 
 # Testing
 
 enable_testing()
 
 macro(do_test arg)
-  add_test(test_${arg} Tutte --input-file ${PROJECT_SOURCE_DIR}/tests/${arg}.input 2>/dev/null | diff - ${PROJECT_SOURCE_DIR}/tests/${arg}.output)
+  add_test(test_${arg} tutte --input-file ${PROJECT_SOURCE_DIR}/tests/${arg}.input 2>/dev/null | diff - ${PROJECT_SOURCE_DIR}/tests/${arg}.output)
 endmacro(do_test)
 
 do_test(square4x4ff)
@@ -30,7 +30,7 @@ do_test(tutte_Gppp_N=2_L=4_M=2)
 
 # http://stackoverflow.com/questions/733475/cmake-ctest-make-test-doesnt-build-tests
 # http://public.kitware.com/Bug/view.php?id=8774
-add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} DEPENDS Tutte)
+add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} DEPENDS tutte)
 
 # Packaging
 
