Minor packaging fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,8 @@ add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} DEPENDS tutte)
 
 # Packaging
 
-set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Andrea Bedini")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "computes the Tutte Polynomial")
+set(CPACK_PACKAGE_CONTACT "Andrea Bedini <andrea.bedini@gmail.com>")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING")
 set(CPACK_PACKAGE_VERSION_MAJOR "${Tutte_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${Tutte_VERSION_MINOR}")
