--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,10 @@ language: cpp
 compiler: gcc
 before_install:
   - sudo apt-get update
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo add-apt-repository -y ppa:boost-latest/ppa
-  - sudo apt-get update
-  - sudo apt-get install -qq cmake g++-4.8 libboost-program-options1.55-dev libgmp-dev
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 50
+  - sudo apt-get install -qq build-essential cmake libboost-program-options-dev libgmp-dev
 before_script:
   - mkdir build
   - cd build
   - cmake ..
 script: make check
-cache: apt 
-after_success:
-  - cpack -C CPackConfig.cmake -G TGZ
-  - cpack -C CPackConfig.cmake -G DEB
+cache: apt
